vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: voting-app
spec:
  type: NodePort
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
